<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:paddingVertical="10dp">

    <ImageView
        android:id="@+id/imgHistory"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image_from_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvHistoryTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/_20210528_15_01_00"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/imgHistory"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvHistoryTime"
        app:layout_constraintLeft_toRightOf="@id/imgHistory"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tvHistoryConfidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/ninetynine" />

        <TextView
            android:id="@+id/tvHistoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:text="@string/cataract" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>